   - Add pulseTime parameter to AMX protocol (MODELER-434)
   - Enfore unicity of element id in schemas (MODELER-412)
   - Add 'data' attribute to protocol xml for 1-wire (MODELER-435)
   - In edit/new macro window, command tree must include device name (MODELER-361)
   - Add support for Marantz Receivers protocol (MODELER-442)
   - Support new features in Marantz AVR protocol (MODELER-461)

 Fixes:

   - MODELER-346: regexp validation for IP fields in TCP
     and Telnet protocols were wrong. Validations have
     been disabled.
   - MODELER-384: Property form title is wrong for webview
     and color picker components
   - MODELER-360: Command, Sensor, Switch names are
     not correctly encoded/decoded
   - MODELER-385: Double scrollbar on widget selection
   - MODELER-395: Incorrect password field generated
     in panel.xml for Web element
   - MODELER-389: LazyInitializationException on
     Device.deviceAttrs
   - MODELER-396: org.springframework.orm.hibernate3.HibernateSystemException
     when saving UI design
   - MODELER-398: Setting a sensor on a Web element does not work
   - MODELER-392: Fractional Widget Coordinates when Browser
     has non-default zoom
   - MODELER-399: Order of windows
   - MODELER-410: KNX import not working anymore
   - MODELER-409: NPE on autosave from UI design
   - MODELER-418: Hibernate 'lazy initialization' exception on save (2)
   - MODELER-455: Incorrectly referenced css

Designer 2.13.6 (2012-09-20 Rosemary)
=====================================

Bug fix release:

 
 - Increase maximum command field length from 1000
   characters to 4000 characters for UDP, TCP, HTTP
   and Telnet protocols
 - MODELER-379: attempting to delete an already deleted
   device shows up as an error to the user
 - MODELER-380: Log errors related to data integrity
   issues when loading switches for a device
 - Add panStamps lagarto server protocol configuration


Designer 2.13.5 (2012-09-11 Rosemary)
=====================================
